--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storiny/test-utils",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Testing utility functions for Storiny",
   "main": "index.js",
   "author": "zignis <zignis@storiny.com>",
@@ -15,7 +15,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "devDependencies": {
+  "dependencies": {
     "@storiny/prettier-config": "^1.1.0",
     "@storiny/eslint-config": "^1.1.0",
     "@storiny/tsconfig": "^1.0.0",
